Some exception are fixed

--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
             <h2>Popular right now</h2>
         </div>
         <div class="row-head-class ml-32 mr-36 mt-12 flex gap-14 grid grid-cols-3 w-[99%px] h-[58px]">
-            <div class="row-inside-content-1 flex items-end">
-                <div>
+            <div class="row-inside-content flex items-end">
+                <div class="row-inside-content-1">
                     <a href="/">ultraboost</a>
                 </div>
 
@@ -384,13 +384,13 @@
             <div class="row-inside-content-3">
                 <a href="/">backpacks</a>
             </div>
-            <div class="row-inside-content-4 items-center">
+            <div class="row-inside-content-4 flex">
                 <a href="/">cleats</a>
             </div>
-            <div class="row-inside-content-5 flex items-center">
+            <div class="row-inside-content-5 flex">
                 <a href="/">stan smith</a>
             </div>
-            <div class="row-inside-content-6 flex items-center">
+            <div class="row-inside-content-6 flex">
                 <a href="/">samba</a>
             </div>
         </div>
@@ -398,7 +398,7 @@
     </section>
     <!-- row section end-->
     <!-- bottom  stories section start -->
-    <section class="custom-stories flex justify-center  grid grid-cols-2 mt-28 w-[100%] h-[760px]">
+    <section class="custom-stories flex justify-center  grid grid-cols-2 mt-16 w-[100%] h-[760px]">
         <div class="bottom-stories  flex flex-col ml-32 w-[655px] h-[520px]">
             <div class=" flex items-center  mt-28  w-[420px] h-[126px]">
                 <h2>Stories, style, and sporting goods at adidas, since 1949</h2>
